Mon Jan 30 17:32:50 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * bin/PerlDDS/Cross_Sync.pm:
        * bin/PerlDDS/Cross_Sync_Common.pm:

          Use strict-mode Perl.
          Added compatiblity for IPv6-enabled Windows hosts.

        * bin/cross_tests.lst:
        * tests/DCPS/Crossplatform/Messenger_run_test.pl:

          Enable testing with RTPS transport and discovery.

Mon Jan 30 16:56:02 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/udp/UdpDataLink.cpp:
        * dds/DCPS/transport/udp/UdpTransport.cpp:

          Update to limit the scope of last Friday's change to udp
          transport behavior: use local address as a hostname if it's
          the "any" address (all zeros, the default).

Mon Jan 30 15:55:12 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tests/DCPS/UnitTests/ut_ParameterListConverter.cpp:

          Test encode/decode of associated writers.

Mon Jan 30 15:07:37 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * bin/dcps_tests.lst:

          Missing colon in list.

Mon Jan 30 15:02:16 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tests/DCPS/DcpsIntegration:
        * tests/DCPS/Deadline:
        * tests/DCPS/FooTest3_0:
        * tests/DCPS/FooTest3_1:
        * tests/DCPS/FooTest3_2:
        * tests/DCPS/Lifespan:
        * tests/DCPS/Messenger:
        * tests/DCPS/Partition:
        * tests/DCPS/PersistentDurability:
        * tests/DCPS/Reconnect:
        * tests/DCPS/RtpsDiscovery:
        * tests/DCPS/SetQosDeadline:
        * tests/DCPS/SetQosPartition:
        * tests/DCPS/TransientDurability:
        * tests/DCPS/TransientLocalTest:
        * tests/DCPS/unit:
        * examples/DCPS/DistributedContent:

          Set svn:ignore

        * examples/DCPS/DistributedContent/run_test.pl:

          Don't rely on tcp.conf

Fri Jan 27 22:34:39 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/NetworkAddress.h: