@@ -1,3 +1,11 @@
+Mon Jan 30 19:35:39 UTC 2012  Jeff Schmitz  <schmitz_j@ociweb.com>
+
+        * dds/DCPS/RTPS/Sedp.h:
+        * dds/DCPS/RTPS/Sedp.cpp:
+
+          Complete datawriter association with discovered opendds reader after 
+          reader associates with writer.
+
 Mon Jan 30 17:32:50 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * bin/PerlDDS/Cross_Sync.pm:
